TrialoftheTitansPackage/main/default/objects/Project_Review__c/Project_Review__c.object-meta.xml
<CustomObject>
    <label>Project Review</label>
    <nameField>
        <label>Project Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>