TrialoftheTitansPackage/main/default/objects/Project_Review__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Project Reviews</relationshipLabel>
    <relationshipName>Project_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>