TrialoftheTitansPackage/main/default/objects/Project_Review__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Reviews</relationshipLabel>
    <relationshipName>Project_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>