TrialoftheTitansPackage/main/default/objects/Project_Review__c/validationRules/Cohort_to_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Cohort_to_Project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Cohort__c)), ISBLANK(Project__c))</errorConditionFormula>
    <errorMessage>Please ensure that you enter a value for Project when selecting a Cohort.</errorMessage>
</ValidationRule>